<resources>
    <string name="app_name">Assignment1</string>

    <string name="discount_calculator">Discount Calculator</string>
    <string name="item_price">Item Price:</string>
    <string name="sale_percentage">Sale %</string>
    <string name="ten_percentage">10%</string>
    <string name="fifteen_percentage">15%</string>
    <string name="eighteen_percentage">18%</string>
    <string name="custom">Custom</string>
    <string name="custom_percentage">Custom %:</string>
    <string name="discount">Discount:</string>
    <string name="default_percentage">25%</string>
    <string name="final_price">Final Price:</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="discount_amount">0.00</string>
    <string name="final_amount">0.00</string>
    <string name="list_price">Enter List Price</string>
</resources>